# haskell-tzdata

./: .gitignore  README.md  build-tzdata.sh  cabal.project  stack.yaml  tzcode.patch  tzdata.cabal
Data/Time/Zones/: .gitignore  DB.hs.template  Files.hs
tests/: testDB.hs
tools/: genZones.hs  tzdata-tools.cabal
